test_src/compiler_errors/types/boolean/TernaryNumberError.b
class TernaryNumberError {
    void test() {
        println(1 ? 1 : 0);
    }
}
